Fixed visually overflowing progress bars.

--- a/client/src/components/List/List.scss
+++ b/client/src/components/List/List.scss
@@ -200,6 +200,7 @@
 }
 
 .light .List li .itemProgressBar {
+  max-width: 100%;
   background-color: rgba(#000, 0.25);
 
   &.primary {
